Refactor: - Code Cleanup - Reduce code readability complexity - Move graphql resolvers to appropriate controllers - Shorter name for custom cache class - SonarQube fixes - Code Readability - Optimize Cache Class - Clean up logging
Signed-off-by: Anshuman Sanghvi <anshuman.sanghvi@gmail.com>